cmake_minimum_required(VERSION 3.12)
add_definitions(-std=c++14)
project(21day)
add_executable(Hello ch1_Hello.cpp)

add_executable(Consist ch2_consist.cpp)

add_executable(VarConst ch3_var_const.cpp)

add_executable(ArrayString ch4_arr_str.cpp)

add_executable(Opt ch5_opt.cpp)

add_executable(Func ch7_func.cpp)

add_executable(PotRef ch8_pot_ref.cpp)

add_executable(Clazz ch9_class.cpp)